RESOLVED FIXED265968
[IFC][Ruby] Fix layout-bounds based line box stretching in vertical writing mode (mostly inter-character annotation)
https://bugs.webkit.org/show_bug.cgi?id=265968
Summary [IFC][Ruby] Fix layout-bounds based line box stretching in vertical writing m...
alan
Reported 2023-12-06 15:01:46 PST
ssia
Attachments
[fast-cq]Patch (5.91 KB, patch)
2023-12-06 15:04 PST, alan
no flags
alan
Comment 1 2023-12-06 15:04:15 PST
Created attachment 468917 [details] [fast-cq]Patch
EWS
Comment 2 2023-12-07 06:50:19 PST
Committed 271669@main (d09702666d45): <https://commits.webkit.org/271669@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468917 [details].
Radar WebKit Bug Importer
Comment 3 2023-12-07 06:51:14 PST
Note You need to log in before you can comment on or make changes to this bug.