[IFC][Ruby] Fix layout-bounds based line box stretching in vertical writing mode (mostly inter-character annotation) https://bugs.webkit.org/show_bug.cgi?id=265968

Reviewed by Antti Koivisto.

1. Move annotation box stretching after ideographic layout bounds adjustment
2. Use the correct baseline type when checking if (vertical) annotation box fits

* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::build):
(WebCore::Layout::LineBoxBuilder::constructInlineLevelBoxes):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.h:
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::adjustLayoutBoundsAndStretchAncestorRubyBase):

Canonical link: https://commits.webkit.org/271669@main